--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@mui/styles": "^5.8.6",
         "@mui/system": "^5.8.6",
         "@mui/utils": "^5.8.6",
+        "@mui/x-data-grid": "^5.17.17",
         "@tabler/icons": "^1.72.0",
         "apexcharts": "^3.35.3",
         "axios": "^1.2.1",
