--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@tabler/icons": "^1.72.0",
         "apexcharts": "^3.35.3",
         "axios": "^1.2.1",
+        "crypto-js": "^4.1.1",
         "formik": "^2.2.9",
         "framer-motion": "^6.3.16",
         "jwt-decode": "^3.1.2",
