--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
         "framer-motion": "^6.3.16",
         "jwt-decode": "^3.1.2",
         "material-ui-popup-state": "^4.0.1",
+        "plaid": "^12.2.0",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.0",
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0",
         "react-perfect-scrollbar": "^1.5.8",
+        "react-plaid-link": "^3.3.2",
         "react-redux": "^8.0.2",
         "react-router": "6.3.0",
         "react-router-dom": "^6.6.1",
