--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@mui/system": "^5.8.6",
         "@mui/utils": "^5.8.6",
         "@mui/x-data-grid": "^5.17.17",
+        "@reduxjs/toolkit": "^2.5.0",
         "@tabler/icons": "^1.72.0",
         "apexcharts": "^3.35.3",
         "axios": "^1.2.1",
