remove unused components

--- a/.eslintrc
+++ b/.eslintrc
@@ -34,12 +34,14 @@
         "jsx-a11y/anchor-is-valid": 0,
         "prefer-destructuring": 0,
         "no-shadow": 0,
-        "no-unused-vars": [
-            1,
-            {
-                "ignoreRestSiblings": false
-            }
-        ],
+        // turn off no-unused-vars for now
+        "no-unused-vars": 0,
+        // "no-unused-vars": [
+        //     1,
+        //     {
+        //         "ignoreRestSiblings": false
+        //     }
+        // ],
         "prettier/prettier": [
             2,
             {
