--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-    "name": "berry-material-react-free",
+    "name": "Pennyworth",
     "version": "3.2.0",
     "private": true,
     "dependencies": {
         "@emotion/cache": "^11.9.3",
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
+        "@jsonforms/react": "^3.4.1",
         "@mui/icons-material": "^5.8.4",
         "@mui/lab": "^5.0.0-alpha.88",
         "@mui/material": "^5.8.6",
