--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "@emotion/cache": "^11.9.3",
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
+        "@jsonforms/core": "^3.4.1",
+        "@jsonforms/material-renderers": "^3.4.1",
         "@jsonforms/react": "^3.4.1",
         "@mui/icons-material": "^5.8.4",
         "@mui/lab": "^5.0.0-alpha.88",
@@ -14,6 +16,7 @@
         "@mui/system": "^5.8.6",
         "@mui/utils": "^5.8.6",
         "@mui/x-data-grid": "^5.17.17",
+        "@mui/x-date-pickers": "^6.0.0",
         "@reduxjs/toolkit": "^2.5.0",
         "@tabler/icons": "^1.72.0",
         "apexcharts": "^3.35.3",
