--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-router-dom": "^6.6.1",
         "react-scripts": "^5.0.1",
         "redux": "^4.2.0",
+        "sass-loader": "^16.0.4",
         "yup": "^0.32.11"
     },
     "scripts": {
@@ -86,6 +87,6 @@
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "4.6.0",
         "prettier": "^2.7.1",
-        "sass": "^1.53.0"
+        "sass": "^1.83.0"
     }
 }
